# mdaviz

./: .buildinfo  .gitignore  .pre-commit-config.yaml  BUILD_EXECUTABLES.md  CI_CD_UPDATE_SUMMARY.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_PLAN.md  LICENSE  LICENSE.txt  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  api.html  changes.html  convert_debug_prints.py  env.yml  fit_functionality.html  genindex.html  index.html  install.html  known_bugs.html  license.html  mdaviz.spec  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  run_mypy.sh  search.html  searchindex.js  setup_cx_freeze.py  test_10000_limit.py  test_10000_limit_simple.py  test_cursor_functionality.py  test_resize_manual.py  user_guide.html
.github/workflows/: README.md  build-executables.yml  ci.yml  code.yml  cross-platform-test.yml  deprecation-check.yml  docs.yml  pre-commit.yml  pypi.yml  python313-test.yml
_modules/: index.html
_modules/mdaviz/: aboutdialog.html  chartview.html  data_cache.html  data_table_model.html  data_table_view.html  empty_table_model.html  fit_manager.html  fit_models.html  lazy_folder_scanner.html  lazy_loading_config.html  licensedialog.html  mainwindow.html  mda_file.html  mda_file_table_model.html  mda_file_table_view.html  mda_file_viz.html  mda_folder.html  mda_folder_table_model.html  mda_folder_table_view.html  opendialog.html  popup.html  progress_dialog.html  user_settings.html  utils.html  virtual_table_model.html
_sources/: api.rst.txt  changes.rst.txt  fit_functionality.rst.txt  index.rst.txt  install.rst.txt  known_bugs.rst.txt
_sources/api/: aboutdialog.rst.txt  chartview.rst.txt  data_cache.rst.txt  data_table_model.rst.txt  lazy_loading_config.rst.txt  licensedialog.rst.txt  mainwindow.rst.txt  mda_file.rst.txt  mda_file_table_model.rst.txt  mda_file_table_view.rst.txt  mda_file_viz.rst.txt  mda_folder.rst.txt  mda_folder_table_model.rst.txt  mda_folder_table_view.rst.txt  opendialog.rst.txt  progress_dialog.rst.txt  user_settings.rst.txt  virtual_table_model.rst.txt
_static/: documentation_options.js
api/: aboutdialog.html  app.html  chartview.html  data_cache.html  data_table_model.html  data_table_view.html  empty_table_model.html  fit_manager.html  fit_models.html  lazy_folder_scanner.html  lazy_loading_config.html  licensedialog.html  mainwindow.html  mda_file.html  mda_file_table_model.html  mda_file_table_view.html  mda_file_viz.html  mda_folder.html  mda_folder_table_model.html  mda_folder_table_view.html  opendialog.html  popup.html  progress_dialog.html  user_settings.html  utils.html  virtual_table_model.html
docs/: LOGGING.md  fit_functionality.md  requirements.txt
docs/plan/: BUILD_EXECUTABLES.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_PLAN.md  DOCUMENTATION_REVIEW.md  LOGGING.md  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  STRUCTURE_IMPROVEMENTS_PLAN.md  TEST_IMPROVEMENT_PLAN.md
docs/source/: changes.rst  conf.py  fit_functionality.rst  index.rst  install.rst  known_bugs.rst  license.rst  user_guide.rst
mdaviz/: LICENSE  __init__.py  aboutdialog.py  app.py  chartview.py  chartview_mpl.py  data_table_model.py  data_table_view.py  empty_table_model.py  licensedialog.py  mainwindow.py  mda_data_table_model.py  mda_file.py  mda_file_table_model.py  mda_file_table_view.py  mda_file_viz.py  mda_folder.py  mda_folder_model.py  mda_folder_search.py  mda_folder_table_model.py  mda_folder_table_view.py  mda_folder_table_view_pager.py  mda_search.py  opendialog.py  popup.py  select_det_fields.py  select_dets_fields.py  select_dets_tablemodel.py  select_dets_tableview.py  select_fields_table_model.py  select_fields_table_view.py  tmp.py  user_settings.py  utils.py
mdaviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mdaviz/data/: mda_0004.mda  mda_0012.mda  mda_0015.mda  mda_0016.mda  mda_0017.mda  mda_0018.mda  mda_0022.mda  mda_0035.mda  mda_0036.mda  mda_0037.mda  mda_0038.mda  mda_0039.mda  mda_0041.mda  mda_0043.mda  mda_0045.mda  mda_0046.mda  mda_0048.mda  mda_0049.mda  mda_0050.mda  mda_0051.mda  mda_0053.mda  mda_0059.mda  mda_0064.mda  mda_0066.mda  mda_0067.mda  mda_0072.mda  mda_0073.mda  mda_0074.mda  mda_0075.mda  mda_0076.mda
mdaviz/resources/: bluesky_runs_catalog_search.ui  date_time_range_slider.ui  icons.pptx  mainwindow.ui  mda_file.ui  mda_file_table_view.ui  mda_file_viz.ui  mda_folder.ui  mda_folder_search.ui  mda_folder_table_view.ui  mda_search.ui  opendialog.ui  select_fields_table_view.ui
mdaviz/synApps_mdalib/: LICENSE  METADATA  README.md  f_xdrlib.py  mda.py
mdaviz/tests/: test_app.py
scripts/: README.md  convert_all_debug_prints.py  convert_debug_to_logger.py  migrate_pyqt5_to_pyqt6.py  numpy_hook.py  setup_cx_freeze.py  setup_test_environment.py  test_checks.py  update_dependencies.py  validate_migration.py
src/mdaviz/: __init__.py  aboutdialog.py  app.py  chartview.py  chartview.py.pyqt5_backup  curve_manager.py  data_cache.py  data_table_model.py  data_table_view.py  empty_table_model.py  fit_manager.py  fit_manager.py.pyqt5_backup  fit_models.py  lazy_folder_scanner.py  lazy_folder_scanner.py.pyqt5_backup  lazy_loading_config.py  lazy_loading_config.py.pyqt5_backup  licensedialog.py  logger.py  logging_config.py  mainwindow.py  mainwindow.pyi  mda_file.py  mda_file_table_model.py  mda_file_table_view.py  mda_file_table_view.py.pyqt5_backup  mda_file_viz.py  mda_file_viz.py.pyqt5_backup  mda_file_viz.pyi  mda_folder.py  mda_folder_table_model.py  mda_folder_table_model.py.pyqt5_backup  mda_folder_table_view.py  mda_folder_table_view.py.pyqt5_backup  multidimensional_data_table_model.py  opendialog.py  popup.py  preferences_dialog.py  progress_dialog.py  progress_dialog.py.pyqt5_backup  (+4 more)
src/tests/: conftest.py  test_2d_i0_normalization.py  test_2d_single_point.py  test_aboutdialog.py  test_app.py  test_app.py.pyqt5_backup  test_auto_load.py  test_chartview.py  test_data_cache.py  test_data_table_model.py  test_mda_file.py  (+23 more)
tests/: test_cursor_nearest_point.py  test_fit_integration.py  test_fit_manager.py  test_fit_models.py  test_mainwindow_error.py
(+521 files in other folders)
